Fix a spacing error in the list of places and add a few places that were missing.

--- a/_css/liszt.css
+++ b/_css/liszt.css
@@ -418,15 +418,16 @@ dd .more {
 div.inlinelist ul {
     padding-inline-start: 0px;
     list-style-type: none;
-    display: inline;
+    float:left;
 }
 
 div.inlinelist ul li {
-    display: inline;
+    float:left;
+    padding-right:.5em;
 }
 
 div.inlinelist ul li p {
-    display: inline;
+    float:left;
     margin-block-start: 0px;
     margin-block-end: 0px;
 }
@@ -434,11 +435,11 @@ div.inlinelist ul li p {
 div.inlinelist ul li:after {
     content: ', '
 }
-
 div.inlinelist ul li:last-child:after {
     content: '.'
 }
 
 span.highlight {
+    color:rgb(16, 71, 102);
     font-style: italic;
 }
